# extrator_fbds

./: .gitignore  README.md  SETUP_SUMMARY.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
examples/: airflow_dag_example.py
extrator_fbds/: __init__.py  fbds_async_scraper.py  fbds_core.py  fbds_ocr.py  fbds_retry_failures.py  run_fbds_ocr_batch.py  run_fbds_ocr_batch_mp.py
scripts/: fbds_async_scraper.py  fbds_core.py  fbds_retry_failures.py  run_fbds_ocr_batch.py  run_fbds_ocr_batch_mp.py
tests/: test_cli.py  test_version.py
